Runtime: 7 ms (Top 73.3%) | Memory: 44.18 MB (Top 74.0%)